# rag-pipeline-demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Dockerfile.worker  Makefile  README.md  TODO.md  app.py  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd-prod.yml  cd-staging.yml  ci.yml  eval.yml  load-test.yml
cdk/: app.py  cdk.json
cdk/stacks/: compute_stack.py  data_stack.py  security_stack.py  vpc_stack.py
data/eval/: golden_dataset.jsonl
docs/adr/: 001-vectorstore-choice.md  002-llm-local-vs-cloud.md  003-chunking-strategy.md  004-multi-tenancy.md  005-async-indexation.md  006-observability-stack.md  007-cdk-stack-structure.md  008-cicd-oidc-image-promotion.md
frontend/: .env.local.example  package.json
frontend/__tests__/: Sidebar.test.tsx
frontend/app/: layout.tsx
frontend/app/analytics/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/feedback/: page.tsx
frontend/components/: Sidebar.tsx
frontend/hooks/: useChat.ts
frontend/lib/: api.ts  types.ts
scripts/: index_documents.py
src/: config.py
src/ab_testing/: router.py
src/analytics/: langfuse.py  prometheus.py  tracker.py
src/api/: deps.py  main.py  schemas.py
src/chunking/: base.py  fixed.py  parent_child.py  semantic.py
src/embedding/: base.py  batch.py  ollama.py
src/evaluation/: experiment.py  feedback_store.py  ragas_eval.py
src/generation/: chain.py  guardrails.py  prompts.py
src/ingestion/: deduplicator.py  loaders.py  pii_filter.py  versioning.py
src/retrieval/: cache.py  hybrid.py  query_transform.py  reranker.py
src/vectorstore/: base.py  chroma.py  tenant.py
src/workers/: indexer.py
tests/: conftest.py
tests/integration/: test_retrieval_pipeline.py
tests/load/: locustfile.py
tests/unit/: conftest.py  test_ab_testing.py  test_analytics.py  test_api.py  test_chunking.py  test_embedding.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_retrieval.py
(+11 files in other folders)
