[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-pipeline-demo"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "ANN", # annotations
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# FastAPI router decorators are not fully typed — suppress untyped-decorator noise
module = "src.api.routes.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# LangChain doesn't ship complete stubs — suppress Any-return noise from its internals
module = [
    "langchain_text_splitters.*",
    "langchain_community.*",
    "langchain_chroma.*",
    "langchain_experimental.*",
    "langchain_ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml -v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/**/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
targets = ["src"]
skips = ["B101"]
